--- a/app/src/main/res/layout/activity_budget.xml
+++ b/app/src/main/res/layout/activity_budget.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -7,13 +8,13 @@
 
     <ImageView
         android:id="@+id/backButton"
-        android:textColor="#FFFFFF"
-        android:background="#0D1B2A"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
+        android:layout_width="14dp"
+        android:layout_height="14dp"
         android:layout_alignParentStart="true"
         android:layout_marginTop="16dp"
-        android:src="@drawable/ic_back_arrow"/>
+        android:background="#0D1B2A"
+        android:src="@drawable/ic_back_arrow"
+        android:textColor="@color/white" />
 
     <TextView
         android:id="@+id/title"
@@ -23,29 +24,117 @@
         android:layout_marginTop="24dp"
         android:text="@string/personal_budgeting_title"
         android:textSize="24sp"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/white"
         android:fontFamily="sans-serif-medium" />
 
-    <!-- Circular ProgressBar -->
-    <ProgressBar
-        android:id="@+id/stats_progressbar"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
-        android:indeterminate="false"
-        android:max="100"
-        android:progress="75"
-        android:progressDrawable="@drawable/progress_pie"
-        android:layout_centerInParent="true" />
+    <Button
+        android:id="@+id/addButton2"
+        android:layout_width="112dp"
+        android:layout_height="48dp"
+        android:layout_below="@+id/addTrans"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="152dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="131dp"
+        android:backgroundTint="#354C61"
+        android:paddingLeft="32dp"
+        android:paddingTop="8dp"
+        android:paddingRight="32dp"
+        android:paddingBottom="8dp"
+        android:text="@string/add"
+        android:textColor="@color/white" />
 
-    <!-- TextView to Display Progress -->
-    <TextView
-        android:id="@+id/progress_text"
+
+    <!--    &lt;!&ndash; Circular ProgressBar &ndash;&gt;-->
+<!--    <ProgressBar-->
+<!--        android:id="@+id/stats_progressbar"-->
+<!--        style="?android:attr/progressBarStyleHorizontal"-->
+<!--        android:layout_width="300dp"-->
+<!--        android:layout_height="300dp"-->
+<!--        android:indeterminate="false"-->
+<!--        android:max="100"-->
+<!--        android:progress="75"-->
+<!--        android:progressDrawable="@drawable/progress_pie"-->
+<!--        android:layout_centerInParent="true" />-->
+
+<!--    &lt;!&ndash; TextView to Display Progress &ndash;&gt;-->
+
+<!--    <TextView-->
+<!--        android:id="@+id/progress_text"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_alignStart="@+id/stats_progressbar"-->
+<!--        android:layout_alignTop="@+id/stats_progressbar"-->
+<!--        android:layout_marginStart="131dp"-->
+<!--        android:layout_marginTop="136dp"-->
+<!--        android:text="75%"-->
+<!--        android:textColor="#FFFFFF"-->
+<!--        android:textSize="20sp" />-->
+
+    <Spinner
+        android:id="@+id/addBudg"
         android:layout_width="wrap_content"
+        android:layout_height="41dp"
+        android:layout_below="@+id/BudgetCat"
+        android:layout_alignParentEnd="true"
+        android:textColor="@color/white"
+        android:layout_marginStart="27dp"
+        android:layout_marginTop="-26dp"
+        android:layout_marginEnd="21dp"
+        android:layout_toEndOf="@+id/BudgetCat" />
+
+    <Spinner
+        android:id="@+id/addTrans"
+        android:layout_width="87dp"
         android:layout_height="wrap_content"
-        android:textColor="#000000"
-        android:textSize="20sp"
-        android:text="75%" />
+        android:layout_below="@+id/addBudg"
+        android:layout_alignParentEnd="true"
+        android:textColor="@color/white"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="28dp"
+        android:layout_marginEnd="80dp"
+        android:layout_toEndOf="@+id/BudgetCat" />
+
+    <TextView
+        android:id="@+id/BudgetCat"
+        android:layout_width="155dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/title"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="43dp"
+        android:layout_marginTop="50dp"
+        android:text="@string/budget_category_input"
+        android:textColor="#FFFEFE" />
+
+    <TextView
+        android:id="@+id/AddtoTrans"
+        android:layout_width="162dp"
+        android:layout_height="23dp"
+        android:layout_below="@+id/title"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="71dp"
+        android:layout_marginTop="113dp"
+        android:layout_marginEnd="194dp"
+        android:text="@string/add_transaction"
+        android:textColor="#FFFEFE" />
+
+    <ScrollView
+        android:layout_width="384dp"
+        android:layout_height="331dp"
+        android:layout_above="@+id/addButton"
+        android:layout_below="@+id/addButton2"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="21dp">
+
+        <LinearLayout
+            android:id="@+id/budgetGraphContainer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="16dp" />
+    </ScrollView>
 
     <ImageView
         android:id="@+id/addButton"
