--- a/app/src/main/res/layout/activity_budget.xml
+++ b/app/src/main/res/layout/activity_budget.xml
@@ -29,20 +29,18 @@
 
     <Button
         android:id="@+id/addButton2"
-        android:layout_width="112dp"
-        android:layout_height="48dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/addTrans"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="152dp"
         android:layout_marginTop="50dp"
-        android:layout_marginEnd="131dp"
         android:backgroundTint="#354C61"
         android:paddingLeft="32dp"
         android:paddingTop="8dp"
         android:paddingRight="32dp"
         android:paddingBottom="8dp"
-        android:text="@string/add"
+        android:text="@string/add_transaction"
         android:textColor="@color/white" />
 
 
