--- a/app/src/main/res/layout/record_payment.xml
+++ b/app/src/main/res/layout/record_payment.xml
@@ -35,16 +35,32 @@
         app:layout_constraintBottom_toTopOf="@+id/unpaidTransactionsList" />
 
     <!-- RecyclerView for Unpaid Transactions -->
+
+    <!-- Record Payment Button -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/unpaidTransactionsList"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/recordPayment"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/squareUp" />
 
-    <!-- Record Payment Button -->
+    <TextView
+        android:id="@+id/findPaymentsText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Find Payments You Owe:"
+        android:textColor="#FFFFFF"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/recordPayment"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/unpaidTransactionsList"
+        app:layout_constraintVertical_bias="1.0" />
+
     <Button
         android:id="@+id/recordPayment"
         android:layout_width="0dp"
@@ -57,6 +73,7 @@
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
