--- a/app/src/main/res/layout/transaction_details_dialog.xml
+++ b/app/src/main/res/layout/transaction_details_dialog.xml
@@ -37,6 +37,7 @@
         android:layout_height="wrap_content"
         android:text="Record Payment"
         android:layout_marginTop="16dp"
+        android:backgroundTint="#354C61"
         app:layout_constraintTop_toBottomOf="@+id/transactionDate"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
