--- a/app/src/main/res/layout/activity_budget.xml
+++ b/app/src/main/res/layout/activity_budget.xml
@@ -57,15 +57,15 @@
 
     <Spinner
         android:id="@+id/addTrans"
-        android:layout_width="87dp"
-        android:layout_height="wrap_content"
+        android:layout_width="140dp"
+        android:layout_height="46dp"
         android:layout_below="@+id/addBudg"
         android:layout_alignParentEnd="true"
-        android:textColor="@color/white"
         android:layout_marginStart="30dp"
         android:layout_marginTop="28dp"
-        android:layout_marginEnd="80dp"
-        android:layout_toEndOf="@+id/BudgetCat" />
+        android:layout_marginEnd="27dp"
+        android:layout_toEndOf="@+id/BudgetCat"
+        android:textColor="@color/white" />
 
     <TextView
         android:id="@+id/BudgetCat"
